
	* new S3 methods for Friedman's partial dependence function (FPD)
        and Shapley values (SHAP)

	* better support for cold-/hot-decking missing imputation

	* better automated detection of OpenMP on Windows and macOS

        * better support for factors in data.frames 
        especially for DART where it is the most sorely needed

Changes and New Features in 4.7 (2023-07-10):
	* for FPD/FPDK/SHAP/SHAPK, the x.test argument is smarter
	now a matrix of settings corresponding to ONLY the S columns 
        of x.train in the order of S (and backwards compatible if 
        all P columns of x.train are present as initially required)
        also more realistic default of mult.impute=30 (FPDK/SHAPK only)

Changes and New Features in 4.6 (2023-05-05):
	* updates for FPD/FPDK methods and new docs

	* updates to docs and fixing examples

	* better automated detection of OpenMP on Windows and macOS

Changes and New Features in 4.5 (2023-03-27):
	* to avoid further confusion, renaming prefix HD "hot-deck"
	methods (introduced in v3.9) to suffix K for "kernel" sampling
	that is a more appropriate name.  "hot-deck" is reserved for
        the new function HDimpute that provides hot-deck missing 
        value imputation

	* new function tsvs for Thompson Sampling Variable Selection

	* C++11 is now the CRAN standard

	* Dirichlet sparse prior settings properly handle data.frame factors
	i.e., grouped variable dummies receive appropriate Dirichlet weights
	experimental feature for continuous and dichotomous outcomes
	along with time-to-event and competing risks
	Chipman H, George E, Hahn R, McCulloch R, Pratola M, Sparapani, R. 
	"Section 7.1.1: Grouped variables and the DART prior" In
	"Computational approaches to Bayesian Additive Regression Trees", 
	Chapter of Computational Statistics in Data Science,
	Piegorsch W, Levine R, Zhang HH, Lee TCM (eds.) Wiley, 2022.

Changes and New Features in 4.4 (2022-02-15):
	* Makevars now defaults to Windows which is unable to